# zephyr-course

./: .gitignore  README.md
app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/src/: main.cpp
boards/my_nucleo_h7s3l8/: Kconfig.defconfig  Kconfig.my_nucleo_h7s3l8  board.yml  my_nucleo_h7s3l8.dts  my_nucleo_h7s3l8.yaml  my_nucleo_h7s3l8_stm32h7s3xx_ext_flash_app.dts  my_nucleo_h7s3l8_stm32h7s3xx_ext_flash_app.yaml
boards/my_scratch_board/: CMakeLists.txt  Kconfig.defconfig  Kconfig.my_scratch_board  board.cmake  board.yml  board_init.c  my_scratch_board.dts  my_scratch_board_defconfig
drivers/: CMakeLists.txt
drivers/dts/bindings/: vendor-prefixes.txt
drivers/dts/bindings/sensor/: custom,led-sensor.yaml
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/led_sensor/: CMakeLists.txt  Kconfig  led_sensor.c
